--- a/index.html
+++ b/index.html
@@ -9,32 +9,18 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
   </head>
   <body>
-    <div class="popup-box">
-      <div class="popup">
-        <div class="content">
-          <header>
-            <p>Add new note</p>
-            <i class="uil uil-times">x</i>
-          </header>
-          <form action="#">
-            <div class="row title">
-              <label>Title</label>
-              <input type="text" spellcheck="false">
-            </div>
-            <div class="row description">
-              <label>Description</label>
-              <textarea spellcheck="false"></textarea>
-            </div>
-            <button>Add Note</button>
-          </form>
-        </div>
-      </div>
-    </div>
     <div class="wrapper">
-      <li class="add-box">
-        <div class="icon"><i class="uil uil-plus"></i></div>
-        <p>Add new note</p>
-      </li>
+      <div class="select-btn">
+        <span>Select Country</span>
+        <i class="uil uil-angle-down"></i>
+      </div>
+      <div class="content">
+        <div class="search">
+          <i class="uil uil-search"></i>
+          <input type="text" placeholder="Search...">
+        </div>
+        <ul class="options"></ul>
+      </div>
     </div>
 
     <script src="app.js"></script>
